# midnight-rust-bindgen

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.config/: zepter.yaml
.github/workflows/: ci.yml
crates/compact-codegen/: Cargo.toml
crates/compact-codegen/src/: ir.rs  lib.rs  main.rs  schema.rs  types.rs
crates/compact-codegen/src/expand/: circuit_calls.rs  circuits.rs  constants.rs  data_types.rs  helpers.rs  ledger.rs  mod.rs  types.rs
crates/midnight-bindgen/: Cargo.toml
crates/midnight-bindgen-macro/: Cargo.toml
crates/midnight-bindgen-macro/src/: lib.rs
crates/midnight-bindgen-runtime/: Cargo.toml
crates/midnight-bindgen-runtime/src/: accessors.rs  conversions.rs  error.rs  lazy.rs  lib.rs  nav.rs  reexports.rs
crates/midnight-bindgen/src/: lib.rs
docs/: SPEC.md
tests/fixtures/: gateway-contract-info.json  many-fields.compact
tests/fixtures/compiled/counter/compiler/: contract-info.json
tests/fixtures/compiled/election/compiler/: contract-info.json
tests/fixtures/compiled/many-fields/compiler/: contract-info.json
tests/fixtures/compiled/tiny/compiler/: contract-info.json
tests/fixtures/compiled/zerocash/compiler/: contract-info.json
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
