[workspace]
resolver = "2"
members = ["crates/*", "tests/integration"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/RomarQ/midnight-rust-bindgen"

[workspace.dependencies]
midnight-serialize = { git = "https://github.com/midnightntwrk/midnight-ledger", rev = "371b8012", package = "midnight-serialize" }
midnight-onchain-state = { git = "https://github.com/midnightntwrk/midnight-ledger", rev = "371b8012", package = "midnight-onchain-state" }
midnight-storage = { git = "https://github.com/midnightntwrk/midnight-ledger", rev = "371b8012", package = "midnight-storage" }
midnight-base-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger", rev = "371b8012", package = "midnight-base-crypto" }
midnight-transient-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger", rev = "371b8012", package = "midnight-transient-crypto" }
hex = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
compact-codegen = { path = "crates/compact-codegen" }
midnight-bindgen-runtime = { path = "crates/midnight-bindgen-runtime" }
midnight-bindgen-macro = { path = "crates/midnight-bindgen-macro" }
midnight-bindgen = { path = "crates/midnight-bindgen" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Keeping match arms separate can be clearer for documenting intent
match_same_arms = "allow"
