[package]
name = "compact-codegen"
description = "Code generation library for Midnight Compact smart contract bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
clap = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }

[lints]
workspace = true
