[package]
name = "midnight-bindgen-runtime"
description = "Runtime library for midnight-bindgen generated contract bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
midnight-serialize = { workspace = true }
midnight-onchain-state = { workspace = true }
midnight-storage = { workspace = true }
midnight-base-crypto = { workspace = true }
midnight-transient-crypto = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
