[package]
name = "midnight-bindgen"
description = "Generate typed Rust bindings from Midnight Compact smart contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
midnight-bindgen-runtime = { workspace = true }
midnight-bindgen-macro = { workspace = true }

[lints]
workspace = true
